Ajustes e implementações diversas 17-04-2017

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -2,64 +2,81 @@ PersistenceErrorOccured=A persistence error occurred.
 Previous=Previous
 Next=Next
 
-ItemPedidoDAOCreated=ItemPedidoDAO was successfully created.
-ItemPedidoDAOUpdated=ItemPedidoDAO was successfully updated.
-ItemPedidoDAODeleted=ItemPedidoDAO was successfully deleted.
-CreateItemPedidoDAOTitle=Create New ItemPedidoDAO
-CreateItemPedidoDAOSaveLink=Save
-CreateItemPedidoDAOShowAllLink=Show All ItemPedidoDAO Items
-CreateItemPedidoDAOIndexLink=Index
-CreateItemPedidoDAOLabel_iditem=Iditem:
-CreateItemPedidoDAORequiredMessage_iditem=The Iditem field is required.
-CreateItemPedidoDAOTitle_iditem=Iditem
-CreateItemPedidoDAOLabel_quantidade=Quantidade:
-CreateItemPedidoDAORequiredMessage_quantidade=The Quantidade field is required.
-CreateItemPedidoDAOTitle_quantidade=Quantidade
-CreateItemPedidoDAOLabel_idpedido=Idpedido:
-CreateItemPedidoDAORequiredMessage_idpedido=The Idpedido field is required.
-CreateItemPedidoDAOTitle_idpedido=Idpedido
-CreateItemPedidoDAOLabel_idproduto=Idproduto:
-CreateItemPedidoDAORequiredMessage_idproduto=The Idproduto field is required.
-CreateItemPedidoDAOTitle_idproduto=Idproduto
-EditItemPedidoDAOTitle=Edit ItemPedidoDAO
-EditItemPedidoDAOSaveLink=Save
-EditItemPedidoDAOViewLink=View
-EditItemPedidoDAOShowAllLink=Show All ItemPedidoDAO Items
-EditItemPedidoDAOIndexLink=Index
-EditItemPedidoDAOLabel_iditem=Iditem:
-EditItemPedidoDAORequiredMessage_iditem=The Iditem field is required.
-EditItemPedidoDAOTitle_iditem=Iditem
-EditItemPedidoDAOLabel_quantidade=Quantidade:
-EditItemPedidoDAORequiredMessage_quantidade=The Quantidade field is required.
-EditItemPedidoDAOTitle_quantidade=Quantidade
-EditItemPedidoDAOLabel_idpedido=Idpedido:
-EditItemPedidoDAORequiredMessage_idpedido=The Idpedido field is required.
-EditItemPedidoDAOTitle_idpedido=Idpedido
-EditItemPedidoDAOLabel_idproduto=Idproduto:
-EditItemPedidoDAORequiredMessage_idproduto=The Idproduto field is required.
-EditItemPedidoDAOTitle_idproduto=Idproduto
-ViewItemPedidoDAOTitle=View
-ViewItemPedidoDAODestroyLink=Destroy
-ViewItemPedidoDAOEditLink=Edit
-ViewItemPedidoDAOCreateLink=Create New ItemPedidoDAO
-ViewItemPedidoDAOShowAllLink=Show All ItemPedidoDAO Items
-ViewItemPedidoDAOIndexLink=Index
-ViewItemPedidoDAOLabel_iditem=Iditem:
-ViewItemPedidoDAOTitle_iditem=Iditem
-ViewItemPedidoDAOLabel_quantidade=Quantidade:
-ViewItemPedidoDAOTitle_quantidade=Quantidade
-ViewItemPedidoDAOLabel_idpedido=Idpedido:
-ViewItemPedidoDAOTitle_idpedido=Idpedido
-ViewItemPedidoDAOLabel_idproduto=Idproduto:
-ViewItemPedidoDAOTitle_idproduto=Idproduto
-ListItemPedidoDAOTitle=List
-ListItemPedidoDAOEmpty=(No ItemPedidoDAO Items Found)
-ListItemPedidoDAODestroyLink=Destroy
-ListItemPedidoDAOEditLink=Edit
-ListItemPedidoDAOViewLink=View
-ListItemPedidoDAOCreateLink=Create New ItemPedidoDAO
-ListItemPedidoDAOIndexLink=Index
-ListItemPedidoDAOTitle_iditem=Iditem
-ListItemPedidoDAOTitle_quantidade=Quantidade
-ListItemPedidoDAOTitle_idpedido=Idpedido
-ListItemPedidoDAOTitle_idproduto=Idproduto
+ClienteDAOCreated=ClienteDAO was successfully created.
+ClienteDAOUpdated=ClienteDAO was successfully updated.
+ClienteDAODeleted=ClienteDAO was successfully deleted.
+CreateClienteDAOTitle=Create New ClienteDAO
+CreateClienteDAOSaveLink=Save
+CreateClienteDAOShowAllLink=Show All ClienteDAO Items
+CreateClienteDAOIndexLink=Index
+CreateClienteDAOLabel_id=Id:
+CreateClienteDAORequiredMessage_id=The Id field is required.
+CreateClienteDAOTitle_id=Id
+CreateClienteDAOLabel_nome=Nome:
+CreateClienteDAOTitle_nome=Nome
+CreateClienteDAOLabel_cpf=Cpf:
+CreateClienteDAOTitle_cpf=Cpf
+CreateClienteDAOLabel_endereco=Endereco:
+CreateClienteDAOTitle_endereco=Endereco
+CreateClienteDAOLabel_telefone=Telefone:
+CreateClienteDAOTitle_telefone=Telefone
+CreateClienteDAOLabel_email=Email:
+CreateClienteDAOTitle_email=Email
+CreateClienteDAOLabel_idusuario=Idusuario:
+CreateClienteDAORequiredMessage_idusuario=The Idusuario field is required.
+CreateClienteDAOTitle_idusuario=Idusuario
+EditClienteDAOTitle=Edit ClienteDAO
+EditClienteDAOSaveLink=Save
+EditClienteDAOViewLink=View
+EditClienteDAOShowAllLink=Show All ClienteDAO Items
+EditClienteDAOIndexLink=Index
+EditClienteDAOLabel_id=Id:
+EditClienteDAORequiredMessage_id=The Id field is required.
+EditClienteDAOTitle_id=Id
+EditClienteDAOLabel_nome=Nome:
+EditClienteDAOTitle_nome=Nome
+EditClienteDAOLabel_cpf=Cpf:
+EditClienteDAOTitle_cpf=Cpf
+EditClienteDAOLabel_endereco=Endereco:
+EditClienteDAOTitle_endereco=Endereco
+EditClienteDAOLabel_telefone=Telefone:
+EditClienteDAOTitle_telefone=Telefone
+EditClienteDAOLabel_email=Email:
+EditClienteDAOTitle_email=Email
+EditClienteDAOLabel_idusuario=Idusuario:
+EditClienteDAORequiredMessage_idusuario=The Idusuario field is required.
+EditClienteDAOTitle_idusuario=Idusuario
+ViewClienteDAOTitle=View
+ViewClienteDAODestroyLink=Destroy
+ViewClienteDAOEditLink=Edit
+ViewClienteDAOCreateLink=Create New ClienteDAO
+ViewClienteDAOShowAllLink=Show All ClienteDAO Items
+ViewClienteDAOIndexLink=Index
+ViewClienteDAOLabel_id=Id:
+ViewClienteDAOTitle_id=Id
+ViewClienteDAOLabel_nome=Nome:
+ViewClienteDAOTitle_nome=Nome
+ViewClienteDAOLabel_cpf=Cpf:
+ViewClienteDAOTitle_cpf=Cpf
+ViewClienteDAOLabel_endereco=Endereco:
+ViewClienteDAOTitle_endereco=Endereco
+ViewClienteDAOLabel_telefone=Telefone:
+ViewClienteDAOTitle_telefone=Telefone
+ViewClienteDAOLabel_email=Email:
+ViewClienteDAOTitle_email=Email
+ViewClienteDAOLabel_idusuario=Idusuario:
+ViewClienteDAOTitle_idusuario=Idusuario
+ListClienteDAOTitle=List
+ListClienteDAOEmpty=(No ClienteDAO Items Found)
+ListClienteDAODestroyLink=Destroy
+ListClienteDAOEditLink=Edit
+ListClienteDAOViewLink=View
+ListClienteDAOCreateLink=Create New ClienteDAO
+ListClienteDAOIndexLink=Index
+ListClienteDAOTitle_id=Id
+ListClienteDAOTitle_nome=Nome
+ListClienteDAOTitle_cpf=Cpf
+ListClienteDAOTitle_endereco=Endereco
+ListClienteDAOTitle_telefone=Telefone
+ListClienteDAOTitle_email=Email
+ListClienteDAOTitle_idusuario=Idusuario
